# DumpMarket

./: DumpMarketFromRedis.sln  README.md  btc_market.txt
CRedis/: CMakeLists.txt  CRedis.vcxproj  CRedis.vcxproj.filters  RedisApi.cpp  RedisApiImpl.cpp  RedisApiImpl.h  RedisSpi.h
Output/CRedis/include/: RedisApi.h  RedisSpi.h
Output/CRedis/windows/x64/Debug/: CRedis.lib
dumpData/: CJsonObject.cpp  CMakeLists.txt  HandleMsg.cpp  HandleMsg.h  cJSON.c  cJSON.h  dumpData.cpp  dumpData.vcxproj  dumpData.vcxproj.filters  glogbase.h  logfile.cpp  logfile.h  marketstruct.h  profile.cpp  profile.h  toolGeneral.hpp
test1/: DumpMarketFromRedis.cpp  test1.vcxproj  test1.vcxproj.filters
